--- a/Week-01-Python-Foundations/Day-03-Loops.ipynb
+++ b/Week-01-Python-Foundations/Day-03-Loops.ipynb
@@ -30,11 +30,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a156b245",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Example without loop ❌:\n",
@@ -49,11 +45,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2e0c54a5",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#With loop ✅:\n",
@@ -61,11 +53,282 @@
     "for i in range(3):\n",
     "    print(\"Hello\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c2e5398",
+   "metadata": {},
+   "source": [
+    "🔹 1. The for Loop\n",
+    "for variable in sequence:\n",
+    "    # code block"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12b54b2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)\n",
+    "\n",
+    "#👉 range(5) generates numbers: 0, 1, 2, 3, 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73d1a718",
+   "metadata": {},
+   "source": [
+    "🔹 2. range() Function\n",
+    "\n",
+    "range(start, stop, step)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45c32929",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 6):\n",
+    "    print(i)\n",
+    "\n",
+    "for i in range(1, 10, 2):\n",
+    "    print(i)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d89eb738",
+   "metadata": {},
+   "source": [
+    "🔹 3. Looping Through a List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fd79cc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subjects = [\"Math\", \"Science\", \"English\"]\n",
+    "\n",
+    "for subject in subjects:\n",
+    "    print(subject)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e50c6e6",
+   "metadata": {},
+   "source": [
+    "🔹 4. The while Loop\n",
+    "\n",
+    "while condition:\n",
+    "    # code block\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f530187",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = 1\n",
+    "\n",
+    "while count <= 5:\n",
+    "    print(count)\n",
+    "    count += 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "#⚠️ Always update the condition, otherwise you get an infinite loop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68bb5f4a",
+   "metadata": {},
+   "source": [
+    "🔹 5. break Statement\n",
+    "\n",
+    "Stops the loop immediately."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6afe4015",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 10):\n",
+    "    if i == 5:\n",
+    "        break\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9448b27",
+   "metadata": {},
+   "source": [
+    "🔹 6. continue Statement\n",
+    "\n",
+    "Skips the current iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb43a6a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 6):\n",
+    "    if i == 3:\n",
+    "        continue\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff5f7fa6",
+   "metadata": {},
+   "source": [
+    "🔹 7. Nested Loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c85cb46f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 4):\n",
+    "    for j in range(1, 4):\n",
+    "        print(i, j)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b6ecec4",
+   "metadata": {},
+   "source": [
+    "🔹 8. Real-World Example: Sum of Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34ac691d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = 0\n",
+    "\n",
+    "for i in range(1, 6):\n",
+    "    total += i\n",
+    "\n",
+    "print(\"Sum:\", total)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb385331",
+   "metadata": {},
+   "source": [
+    "🔹 9. Using while with User Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a15836b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "password = \"\"\n",
+    "\n",
+    "while password != \"python\":\n",
+    "    password = input(\"Enter password: \")\n",
+    "\n",
+    "print(\"Access granted\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85c32dc9",
+   "metadata": {},
+   "source": [
+    "🔹 10. Mini Practice Programs\n",
+    "✅ Program 1: Print Even Number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b072631",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 21):\n",
+    "    if i % 2 == 0:\n",
+    "        print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b32b7b0d",
+   "metadata": {},
+   "source": [
+    "✅ Program 2: Multiplication Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d15a1ec8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "for i in range(1, 11):\n",
+    "    print(num, \"x\", i, \"=\", num * i)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b178503c",
+   "metadata": {},
+   "source": [
+    "📝 Key Takeaways\n",
+    "\n",
+    "✔ Loops reduce repetition\n",
+    "✔ for loops work with sequences\n",
+    "✔ while loops depend on conditions\n",
+    "✔ break stops, continue skips"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
