--- a/Week-02-NumPy-Data-Handling/Mini-Project-Sales-Analysis-NumPy.ipynb
+++ b/Week-02-NumPy-Data-Handling/Mini-Project-Sales-Analysis-NumPy.ipynb
@@ -120,6 +120,103 @@
     "normalized_sales = (sales_data - min_val) / (max_val - min_val)\n",
     "print(normalized_sales)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da3481c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import numpy as np\n",
+    "from datetime import datetime\n",
+    "\n",
+    "file_path = \"path_to_your_sales_data.csv\"  # Replace with your actual file path\n",
+    "\n",
+    "rows = []\n",
+    "with open(file_path, mode='r') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    header = next(reader)  # Skip header\n",
+    "    \n",
+    "    for row in reader:\n",
+    "        # Extract columns: QUANTITYORDERED, PRICEEACH, SALES, ORDERDATE, PRODUCTLINE, DEALSIZE\n",
+    "        # Indices from your sample data (adjust if needed):\n",
+    "        # QUANTITYORDERED = 1, PRICEEACH=2, SALES=4, ORDERDATE=5, PRODUCTLINE=10, DEALSIZE=26\n",
+    "        quantity = int(row[1])\n",
+    "        price_each = float(row[2])\n",
+    "        sales = float(row[4])\n",
+    "        order_date = row[5]\n",
+    "        product_line = row[10]\n",
+    "        deal_size = row[26]\n",
+    "        \n",
+    "        rows.append([quantity, price_each, sales, order_date, product_line, deal_size])\n",
+    "\n",
+    "# Convert to NumPy structured array for numeric fields\n",
+    "# We'll separate numeric fields for easy NumPy processing:\n",
+    "numeric_data = np.array([(r[0], r[1], r[2]) for r in rows], dtype=[('Quantity', int), ('PriceEach', float), ('Sales', float)])\n",
+    "\n",
+    "print(\"Loaded numeric data sample:\")\n",
+    "print(numeric_data[:5])\n",
+    "\n",
+    "# Step 2: Basic Sales Summary (NumPy)\n",
+    "\n",
+    "total_sales = np.sum(numeric_data['Sales'])\n",
+    "average_sales = np.mean(numeric_data['Sales'])\n",
+    "total_quantity = np.sum(numeric_data['Quantity'])\n",
+    "average_price = np.mean(numeric_data['PriceEach'])\n",
+    "\n",
+    "print(f\"Total Sales: ${total_sales:,.2f}\")\n",
+    "print(f\"Average Sales per Order: ${average_sales:,.2f}\")\n",
+    "print(f\"Total Quantity Ordered: {total_quantity}\")\n",
+    "print(f\"Average Price Each: ${average_price:.2f}\")\n",
+    "\n",
+    "# Step 3: Monthly Sales Analysis (with Python datetime + NumPy)\n",
+    "\n",
+    "# Parse order dates into datetime objects\n",
+    "order_dates = [datetime.strptime(r[3], '%m/%d/%Y %H:%M') if '/' in r[3] else datetime.strptime(r[3], '%m-%d-%Y %H:%M') for r in rows]\n",
+    "\n",
+    "# Extract year-month string (e.g. \"2003-02\")\n",
+    "year_months = [d.strftime('%Y-%m') for d in order_dates]\n",
+    "\n",
+    "# Aggregate sales by year-month using a dictionary\n",
+    "monthly_sales = {}\n",
+    "\n",
+    "for i, ym in enumerate(year_months):\n",
+    "    monthly_sales[ym] = monthly_sales.get(ym, 0) + numeric_data['Sales'][i]\n",
+    "\n",
+    "print(\"\\nMonthly Sales Summary:\")\n",
+    "for ym in sorted(monthly_sales.keys()):\n",
+    "    print(f\"{ym}: ${monthly_sales[ym]:,.2f}\")\n",
+    "\n",
+    "# Step 4: Sales by Product Line\n",
+    "\n",
+    "# Aggregate sales by product line using dictionary\n",
+    "product_line_sales = {}\n",
+    "\n",
+    "for i, row in enumerate(rows):\n",
+    "    pl = row[4]\n",
+    "    product_line_sales[pl] = product_line_sales.get(pl, 0) + numeric_data['Sales'][i]\n",
+    "\n",
+    "print(\"\\nSales by Product Line:\")\n",
+    "for pl, sales in product_line_sales.items():\n",
+    "    print(f\"{pl}: ${sales:,.2f}\")\n",
+    "\n",
+    "# Step 5: Average Sales by Deal Size\n",
+    "\n",
+    "deal_size_sales = {}\n",
+    "deal_size_counts = {}\n",
+    "\n",
+    "for i, row in enumerate(rows):\n",
+    "    ds = row[5]\n",
+    "    deal_size_sales[ds] = deal_size_sales.get(ds, 0) + numeric_data['Sales'][i]\n",
+    "    deal_size_counts[ds] = deal_size_counts.get(ds, 0) + 1\n",
+    "\n",
+    "print(\"\\nAverage Sales by Deal Size:\")\n",
+    "for ds in deal_size_sales:\n",
+    "    avg = deal_size_sales[ds] / deal_size_counts[ds]\n",
+    "    print(f\"{ds}: ${avg:,.2f}\")"
+   ]
   }
  ],
  "metadata": {
