--- a/Week-02-NumPy-Data-Handling/Day-08-File-Handling.ipynb
+++ b/Week-02-NumPy-Data-Handling/Day-08-File-Handling.ipynb
@@ -73,10 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "e1b33796",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 1\n",
+      "Line 2\n",
+      "Line 3\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "file = open(\"data.txt\", \"r\")\n",
     "content = file.read()\n",
@@ -96,10 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "27a04812",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 1\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "file = open(\"data.txt\", \"r\")\n",
     "line = file.readline()\n",
@@ -120,10 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "9ab0ef65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Line 1\\n', 'Line 2\\n', 'Line 3\\n']\n"
+     ]
+    }
+   ],
    "source": [
     "file = open(\"data.txt\", \"r\")\n",
     "lines = file.readlines()\n",
@@ -141,10 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "fc9e138b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 1\n",
+      "Line 2\n",
+      "Line 3\n"
+     ]
+    }
+   ],
    "source": [
     "file = open(\"data.txt\")\n",
     "for line in file:\n",
@@ -166,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "c19d77a3",
    "metadata": {},
    "outputs": [],
@@ -188,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "3314c82f",
    "metadata": {},
    "outputs": [],
@@ -210,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "d6dd9148",
    "metadata": {},
    "outputs": [],
@@ -231,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "007a1530",
    "metadata": {},
    "outputs": [],
@@ -260,10 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "9c59b5ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "file = open(\"data.txt\", \"r\")\n",
     "print(file.tell())\n"
@@ -279,10 +325,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "026f34d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "file.seek(0)\n"
    ]
@@ -298,10 +355,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "5a4494ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Name', 'Age']\n",
+      "['Alice', '25']\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "\n",
@@ -321,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "5c2abfa2",
    "metadata": {},
    "outputs": [],
@@ -343,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "50375c27",
    "metadata": {},
    "outputs": [],
@@ -366,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "6453c803",
    "metadata": {},
    "outputs": [],
@@ -385,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "a84fc885",
    "metadata": {},
    "outputs": [],
@@ -404,10 +470,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "2a355d88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 1\n",
+      "Line 2\n",
+      "Line 3\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    file = open(\"data.txt\", \"r\")\n",
@@ -441,18 +518,39 @@
    "id": "937cba41",
    "metadata": {},
    "source": [
-    "🔹 Encoding Example"
+    "🔹 Encoding Example\n",
+    "\n",
+    "the encoding=\"utf-8\" tells Python how to interpret the bytes in the file as text (characters).\n",
+    "\n",
+    "- Why this matters\n",
+    "\n",
+    "- Files are stored as bytes, but when you read a text file, Python must decode those bytes into characters (letters, symbols, emojis, etc.).\n",
+    "The encoding parameter specifies which decoding rule to use\n",
+    "\n",
+    "- UTF-8 is a universal text encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "33a8ba8d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 1\n",
+      "Line 2\n",
+      "Line 3\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"data.txt\", \"r\", encoding=\"utf-8\") as file:\n",
-    "    data = file.read()\n"
+    "    data = file.read()\n",
+    "    print(data)\n"
    ]
   }
  ],
@@ -463,7 +561,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.14.2"
   }
  },
