--- a/Week-02-NumPy-Data-Handling/Day-10-NumPy-Operations.ipynb
+++ b/Week-02-NumPy-Data-Handling/Day-10-NumPy-Operations.ipynb
@@ -5,12 +5,12 @@
    "id": "40a66911",
    "metadata": {},
    "source": [
-    "📝 Day-10: NumPy Operations"
+    "## 📝 Day-10: NumPy Operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1b8c6744",
    "metadata": {},
    "outputs": [],
@@ -31,10 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b56a4ee9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addition: [5 7 9]\n",
+      "Subtraction: [-3 -3 -3]\n",
+      "Multiplication: [ 4 10 18]\n",
+      "Division: [0.25 0.4  0.5 ]\n",
+      "Power: [1 4 9]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "a = np.array([1, 2, 3])\n",
@@ -68,10 +80,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "24290334",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Square root: [1. 2. 3. 4.]\n",
+      "Exponential: [2.71828183e+00 5.45981500e+01 8.10308393e+03 8.88611052e+06]\n",
+      "Natural log: [0.         1.38629436 2.19722458 2.77258872]\n",
+      "Sine: [ 0.84147098 -0.7568025   0.41211849 -0.28790332]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "arr = np.array([1, 4, 9, 16])\n",
@@ -364,12 +387,6 @@
     "\n",
     "=>Find unique numbers and sort [4,2,5,2,1,4]\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a3f12dbd",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -379,7 +396,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.14.2"
   }
  },
